dark mode fixed

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -552,7 +552,7 @@ h2 {
 }
 
 #cotization1 {
-  margin-right: 300px;
+  margin-right: 100px;
 }
 
 #cotization2 {
